# health-data-edge-cases

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  edge-case.yml
.github/workflows/: ci.yml
R/: reference_metrics.R  run_suite.R
cases/appointment-encounter-status-conflict/: appointments.csv  case.json  encounters.csv  expected_metrics.csv  expected_quality.csv  program_mappings.csv  programs.csv  referrals.csv  reporting_periods.csv
cases/duplicate-encounter-versions/: appointments.csv  case.json  encounters.csv  expected_metrics.csv  expected_quality.csv  program_mappings.csv  programs.csv  referrals.csv  reporting_periods.csv
cases/like-for-like-partial-periods/: appointments.csv  case.json  encounters.csv  expected_metrics.csv  expected_quality.csv  program_mappings.csv  programs.csv  referrals.csv  reporting_periods.csv
cases/unmapped-program-retention/: appointments.csv  case.json  encounters.csv  expected_metrics.csv  expected_quality.csv  program_mappings.csv  programs.csv  referrals.csv  reporting_periods.csv
docs/: ADDING_A_CASE.md  DATA_DICTIONARY.md  DESIGN_NOTES.md  index.html
health_edge_cases/: __init__.py  __main__.py  duckdb_runner.py  report.py  runner.py
schema/: case.schema.json
scripts/: build_report.py  compare_results.py  run_duckdb.py  run_suite.py
sql/: reference.sql
tests/: test_suite.py
