[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "health-data-edge-cases"
version = "0.1.0"
description = "Deterministic synthetic test cases for reliable healthcare operational reporting."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "David Bagley" }]
keywords = [
  "healthcare",
  "data-quality",
  "reporting",
  "synthetic-data",
  "conformance-testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
duckdb = ["duckdb==1.5.5"]

[project.urls]
Homepage = "https://github.com/dfrbagley-cpu/health-data-edge-cases"
Repository = "https://github.com/dfrbagley-cpu/health-data-edge-cases"
Issues = "https://github.com/dfrbagley-cpu/health-data-edge-cases/issues"

[project.scripts]
health-data-edge-cases = "health_edge_cases.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["health_edge_cases"]

[tool.hatch.build.targets.wheel.force-include]
"cases" = "health_edge_cases/data/cases"
"sql" = "health_edge_cases/data/sql"
